[#1004] Update deprecated Lookups, replace AbstractHash implementation with SimpleHash, update deprecated method newInstance